# leela-zero-ui

./: CMakeLists.txt  README.md
cmake/Modules/: FindOpenCL.cmake
src/: CMakeLists.txt  autogtp.cpp  autogtp.h  autogtpui.cpp  board.cpp  board.h  board_ui.cpp  board_ui.h  fox.rc  gtp_agent.cpp  gtp_agent.h  gtp_choice.cpp  gtp_choice.h  gtp_game.cpp  gtp_game.hpp  gtp_lz.cpp  gtp_lz.h  main.cpp  main_con.cpp  play.cpp  safe_queue.hpp  spy.cpp  spy.h  tools.cpp  tools.h  utils.cpp  utils.h
src/dlib/: CMakeLists.txt  dir_nav.h  image_transforms.h  matrix.h  optimization.h  statistics.h
src/dlib/geometry/: point_transforms.h
src/dlib/gui_core/: gui_core_kernel_1.cpp  gui_core_kernel_2.cpp
src/dlib/gui_widgets/: widgets.cpp  widgets.h
src/dlib/image_transforms/: interpolation.h
src/dlib/matrix/: matrix_utilities.h
src/dlib/statistics/: statistics.h
src/foxwq/: main.cpp  resource.h  spy.cpp  spy.h  utils.cpp
src/gui/: algs.h  board.cpp  board.h  board_ui.cpp  board_ui.h  generic_image.h  gui_core.h  gui_core_kernel_1.cpp  gui_core_kernel_1.h  gui_core_kernel_2.cpp  gui_core_kernel_2.h  matrix.h  memory_manager_kernel_2.h  pixel.h  rectangle.h  shared_ptr_thread_safe.h  threads.h  ui.cpp  ui.h
src/gui/threads/: create_new_thread_extension.h  memory_manager_kernel.h  read_write_mutex_extension.h  rsignaler_extension.h  set_kernel_c.h  threaded_object_extension.h  threads_kernel_2.h  threads_kernel_shared.h
src/lz/: GTP.cpp  GTP.h  UCTNode.cpp  UCTNode.h  UCTNodeRoot.cpp  UCTSearch.cpp  UCTSearch.h  Utils.cpp  Utils.h
src/lz/fix/: ladder.cpp
src/selfplay/: algs.h  array2d.h  dassert.h  error.h  matrix.h  memory_manager_kernel_2.h  pixel.h  platform.h  rectangle.h  selfplay.cpp  shared_ptr_thread_safe.h  sync_extension.h  ui.cpp  ui.h  uintn.h  vector.h
src/selfplay/gui_core/: gui_core_kernel_1.cpp  gui_core_kernel_1.h  gui_core_kernel_2.cpp  gui_core_kernel_2.h
src/selfplay/image_loader/: png_loader.cpp  png_loader.h
src/selfplay/image_loader/libpng/: png.c  png.h  pngerror.c  pngget.c  pnginfo.h  pnglibconf.h  pngmem.c  pngpread.c  pngpriv.h  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtrans.c
src/selfplay/matrix/: algs.h  matrix.h  matrix_abstract.h  matrix_assign.h  matrix_assign_fwd.h  matrix_conj_trans.h  matrix_data_layout.h  matrix_default_mul.h  matrix_exp.h  matrix_fwd.h  matrix_mat.h  matrix_math_functions.h  matrix_op.h  matrix_subexp.h  matrix_utilities.h  rectangle.h
src/selfplay/threads/: auto_mutex_extension.h  binary_search_tree_kernel_1.h  binary_search_tree_kernel_2.h  rmutex_extension.h  set_kernel_1.h  set_kernel_c.h  threaded_object_extension.h  threads_kernel_1.h  threads_kernel_2.h  threads_kernel_shared.cpp  threads_kernel_shared.h
src/train_data/: Board.cpp  Board.h  CMakeLists.txt  archive.cpp  archive.hpp  board.cpp  convert.cpp  convert.hpp  gendata.cpp  sgf.cpp  sgf.hpp  utils.cpp  utils.hpp
train/: archive.py  parse.py  tfprocess.py
train/scorer_train/: CMakeLists.txt  board.cpp  board.h  board_config.h  main.cpp  parse.py  playout.cpp  playout.h  tfprocess.py  zobrist.cpp  zobrist.h
